CB projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -208,40 +208,45 @@
 		<Unit filename="..\..\src\dialogs.hpp" />
 		<Unit filename="..\..\src\display.cpp" />
 		<Unit filename="..\..\src\display.hpp" />
-		<Unit filename="..\..\src\editor\action.cpp" />
-		<Unit filename="..\..\src\editor\action.hpp" />
+		<Unit filename="..\..\src\editor\action\action.cpp" />
+		<Unit filename="..\..\src\editor\action\action.hpp" />
 		<Unit filename="..\..\src\editor\action\action_label.cpp" />
 		<Unit filename="..\..\src\editor\action\action_label.hpp" />
+		<Unit filename="..\..\src\editor\action\action_unit.cpp" />
+		<Unit filename="..\..\src\editor\action\action_unit.hpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action.cpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action.hpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.cpp" />
 		<Unit filename="..\..\src\editor\action\mouse\mouse_action_map_label.hpp" />
-		<Unit filename="..\..\src\editor\action_base.hpp" />
-		<Unit filename="..\..\src\editor\brush.cpp" />
-		<Unit filename="..\..\src\editor\brush.hpp" />
-		<Unit filename="..\..\src\editor\brush_bar.cpp" />
-		<Unit filename="..\..\src\editor\brush_bar.hpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_unit.cpp" />
+		<Unit filename="..\..\src\editor\action\mouse\mouse_action_unit.hpp" />
 		<Unit filename="..\..\src\editor\editor_common.hpp" />
 		<Unit filename="..\..\src\editor\editor_controller.cpp" />
 		<Unit filename="..\..\src\editor\editor_controller.hpp" />
 		<Unit filename="..\..\src\editor\editor_display.cpp" />
 		<Unit filename="..\..\src\editor\editor_display.hpp" />
-		<Unit filename="..\..\src\editor\editor_layout.cpp" />
-		<Unit filename="..\..\src\editor\editor_layout.hpp" />
 		<Unit filename="..\..\src\editor\editor_main.cpp" />
 		<Unit filename="..\..\src\editor\editor_main.hpp" />
-		<Unit filename="..\..\src\editor\editor_map.cpp" />
-		<Unit filename="..\..\src\editor\editor_map.hpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.cpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.hpp" />
-		<Unit filename="..\..\src\editor\map_context.cpp" />
-		<Unit filename="..\..\src\editor\map_context.hpp" />
-		<Unit filename="..\..\src\editor\map_fragment.cpp" />
-		<Unit filename="..\..\src\editor\map_fragment.hpp" />
-		<Unit filename="..\..\src\editor\mouse_action.cpp" />
-		<Unit filename="..\..\src\editor\mouse_action.hpp" />
+		<Unit filename="..\..\src\editor\map\editor_map.cpp" />
+		<Unit filename="..\..\src\editor\map\editor_map.hpp" />
+		<Unit filename="..\..\src\editor\map\map_context.cpp" />
+		<Unit filename="..\..\src\editor\map\map_context.hpp" />
+		<Unit filename="..\..\src\editor\map\map_fragment.cpp" />
+		<Unit filename="..\..\src\editor\map\map_fragment.hpp" />
+		<Unit filename="..\..\src\editor\palette\brush.cpp" />
+		<Unit filename="..\..\src\editor\palette\brush.hpp" />
+		<Unit filename="..\..\src\editor\palette\brush_bar.cpp" />
+		<Unit filename="..\..\src\editor\palette\brush_bar.hpp" />
 		<Unit filename="..\..\src\editor\palette\editor_palettes.cpp" />
 		<Unit filename="..\..\src\editor\palette\editor_palettes.hpp" />
+		<Unit filename="..\..\src\editor\palette\palette_layout.cpp" />
+		<Unit filename="..\..\src\editor\palette\palette_layout.hpp" />
 		<Unit filename="..\..\src\editor\palette\terrain_palettes.cpp" />
 		<Unit filename="..\..\src\editor\palette\terrain_palettes.hpp" />
+		<Unit filename="..\..\src\editor\palette\unit_palette.cpp" />
+		<Unit filename="..\..\src\editor\palette\unit_palette.hpp" />
 		<Unit filename="..\..\src\events.cpp" />
 		<Unit filename="..\..\src\events.hpp" />
 		<Unit filename="..\..\src\filechooser.cpp" />
