Cb projectfile update

--- a/projectfiles/CodeBlocks/wesnoth.cbp
+++ b/projectfiles/CodeBlocks/wesnoth.cbp
@@ -229,24 +229,32 @@
 		<Unit filename="..\..\src\editor\editor_main.hpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.cpp" />
 		<Unit filename="..\..\src\editor\editor_preferences.hpp" />
+		<Unit filename="..\..\src\editor\map\context_manager.cpp" />
+		<Unit filename="..\..\src\editor\map\context_manager.hpp" />
 		<Unit filename="..\..\src\editor\map\editor_map.cpp" />
 		<Unit filename="..\..\src\editor\map\editor_map.hpp" />
 		<Unit filename="..\..\src\editor\map\map_context.cpp" />
 		<Unit filename="..\..\src\editor\map\map_context.hpp" />
 		<Unit filename="..\..\src\editor\map\map_fragment.cpp" />
 		<Unit filename="..\..\src\editor\map\map_fragment.hpp" />
-		<Unit filename="..\..\src\editor\palette\brush.cpp" />
 		<Unit filename="..\..\src\editor\palette\brush.hpp" />
-		<Unit filename="..\..\src\editor\palette\brush_bar.cpp" />
 		<Unit filename="..\..\src\editor\palette\brush_bar.hpp" />
 		<Unit filename="..\..\src\editor\palette\editor_palettes.cpp" />
 		<Unit filename="..\..\src\editor\palette\editor_palettes.hpp" />
 		<Unit filename="..\..\src\editor\palette\palette_layout.cpp" />
 		<Unit filename="..\..\src\editor\palette\palette_layout.hpp" />
+		<Unit filename="..\..\src\editor\palette\palette_manager.cpp" />
+		<Unit filename="..\..\src\editor\palette\palette_manager.hpp" />
 		<Unit filename="..\..\src\editor\palette\terrain_palettes.cpp" />
 		<Unit filename="..\..\src\editor\palette\terrain_palettes.hpp" />
 		<Unit filename="..\..\src\editor\palette\unit_palette.cpp" />
 		<Unit filename="..\..\src\editor\palette\unit_palette.hpp" />
+		<Unit filename="..\..\src\editor\toolkit\brush.cpp" />
+		<Unit filename="..\..\src\editor\toolkit\brush.hpp" />
+		<Unit filename="..\..\src\editor\toolkit\brush_bar.cpp" />
+		<Unit filename="..\..\src\editor\toolkit\brush_bar.hpp" />
+		<Unit filename="..\..\src\editor\toolkit\editor_toolkit.cpp" />
+		<Unit filename="..\..\src\editor\toolkit\editor_toolkit.hpp" />
 		<Unit filename="..\..\src\events.cpp" />
 		<Unit filename="..\..\src\events.hpp" />
 		<Unit filename="..\..\src\filechooser.cpp" />
